--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,31 +1,40 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
-    <h1>일정 체크</h1> 
-      <form action="/search" method="get" class="navbar-form navbar-left" role="search">
-        <div class="form-group">
-          <input type="text" role="search" name="select_day" class="datepicker form-control" id="select_day" placeholder="날짜 검색">
-          <button type="submit" class="btn btn-default">Submit</button>
+      <div class="row">
+        <div class="col-xs-6 col-md-2"><h1>일정 체크</h1></div>
+        <div class="col-xs-6 col-md-1">
+          <%= link_to '일정 등록', new_post_path, class:"btn btn-primary", :style=>'color:#FFFFFF;margin-top:22px;' %>
         </div>
-      </form>
-      <div>
-      <% @posts.each do |post| %>
-        <div class="well">
-          <div class="row">
-            <div class="col-xs-12 col-md-8"><%= post.day %> | <%= post.content %></div>
-            <div class="col-xs-12 col-md-4">
-            <div style="text-align:right;">
-              <%= link_to 'Show', post %>
-              <%= link_to 'Edit', edit_post_path(post) %>
-              <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <div class="col-xs-12 col-md-4 col-md-offset-5" style="padding-top:18px;">
+          <form action="/search" method="get" class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+              <div class="col-xs-8 col-md-8" style="padding-right:1px;padding-left:0px;">
+                <input type="text" name="select_day" class="datepicker form-control" id="select_day" placeholder="날짜 검색">
+              </div>
+              <div class="col-xs-4 col-md-4" style="padding-left:1px;">
+                <button type="submit" class="btn btn-default">Submit</button>
+              </div>
             </div>
+          </form>
+        </div>
+      </div>
+    <div>
+      <% @posts.each do |post| %>
+          <div class="well">
+            <div class="row">
+              <div class="col-xs-12 col-md-8"><%= post.day %> | <%= post.content %></div>
+              <div class="col-xs-12 col-md-4">
+              <div style="text-align:right;">
+                <%= link_to 'Show', post %>
+                <%= link_to 'Edit', edit_post_path(post) %>
+                <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+              </div>
+              </div>
             </div>
           </div>
-        </div>
       <% end %>
-      </div>
-      <div>
-      <%= link_to '일정 등록', new_post_path, class:"btn btn-primary", :style=>'color:#FFFFFF;' %>
-      <div>
+    </div>
+      
 </div>
 
 <script type="text/javascript">
