--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -11,16 +11,19 @@
         </ul>
       </div>
     <% end %>
-    <div class="field">
-      <%= f.label :day %><br>
-      <%= f.text_field :day,  :class => 'datepicker' %>
-    </div>
-    <div class="field">
-      <%= f.label :content %><br>
-      <%= f.text_area :content %>
-    </div>
-    <div class="field">
-      <%= f.hidden_field :checking %>
+    <div class="row">
+      <div class="col-xs-12 col-md-2">
+        <div class="field">
+          <%= f.label :day, "날짜" %><br>
+          <%= f.text_field :day,  :class => 'datepicker' %>
+        </div>
+      </div>
+      <div class="col-xs-12 col-md-10">
+        <div class="field">
+          <%= f.label :content, "일정" %><br>
+          <%= f.text_area :content,class: 'form-control', autofocus: true, placeholder: '일정을 입력해주세요.' %>
+        </div>
+      </div>
     </div>
     <div class="actions">
       <%= f.submit :class => 'btn btn-primary' %>
