--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -25,7 +25,7 @@
               <div class="col-xs-12 col-md-8"><%= post.day %> | <%= post.content %></div>
               <div class="col-xs-12 col-md-4">
               <div style="text-align:right;">
-                <%= link_to 'Show', post %>
+                <!--<%= link_to 'Show', post %>-->
                 <%= link_to 'Edit', edit_post_path(post) %>
                 <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
               </div>
