--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -9,7 +9,7 @@
           <form action="/search" method="get" class="navbar-form navbar-left" role="search">
             <div class="form-group">
               <div class="col-xs-8 col-md-8" style="padding-right:1px;padding-left:0px;">
-                <input type="date" name="select_day" class="datepicker form-control" id="select_day" placeholder="날짜 검색">
+                <input type="text" name="select_day" class="datepicker form-control" id="select_day" placeholder="날짜 검색">
               </div>
               <div class="col-xs-4 col-md-4" style="padding-left:1px;">
                 <button type="submit" class="btn btn-default">Submit</button>
