--- a/app/views/posts/after_today.erb
+++ b/app/views/posts/after_today.erb
@@ -4,7 +4,7 @@
         <div class="col-xs-6 col-md-2"><h1>일정 체크</h1></div>
         <div class="col-xs-6 col-md-1">
           <%= link_to '일정 등록', new_post_path, class:"btn btn-primary", :style=>'color:#FFFFFF;margin-top:22px;' %>
-          <a href="/after_today" class="btn btn-primary" style="color:#FFFFFF">지난 일정</a>
+          <a href="/" class="btn btn-primary" style="color:#FFFFFF">돌아가기</a>
         </div>
         <div class="col-xs-12 col-md-4 col-md-offset-5" style="padding-top:18px;">
           <form action="/search" method="get" class="navbar-form navbar-left" role="search">
@@ -21,7 +21,7 @@
       </div>
     <div>
       <% @posts.each do |post| %>
-        <% if @today <= post.day %>
+        <% if @today > post.day %>
           <div class="well">
             <div class="row">
               <div class="col-xs-12 col-md-8"><%= post.day %> | <%= post.content %></div>
