search 페이지에서 show 주석

--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -11,7 +11,7 @@
             <div class="col-xs-12 col-md-8"><%= r.day %> | <%= r.content %></div>
             <div class="col-xs-12 col-md-4">
             <div style="text-align:right;">
-              <%= link_to 'Show', r %>
+              <!--<%= link_to 'Show', r %>-->
               <%= link_to 'Edit', edit_post_path(r) %>
               <%= link_to 'Destroy', r, method: :delete, data: { confirm: 'Are you sure?' } %>
             </div>
