--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,8 +16,61 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </head>
 <body>
-
+<nav class="navbar navbar-default">
+  <div class="container">
+    <div class="container-fluid">
+      <!-- Brand and toggle get grouped for better mobile display -->
+      <div class="navbar-header">
+        <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
+          <span class="sr-only">Toggle navigation</span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+          <span class="icon-bar"></span>
+        </button>
+        <a class="navbar-brand" href="/">일정관리ㅎㅎ</a>
+      </div>
+  
+      <!-- Collect the nav links, forms, and other content for toggling -->
+      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1" style="padding-right: 0px;padding-left: 30px;">
+        <ul class="nav navbar-nav navbar-right">
+          
+          <li><a href="/after_today">지난 일정</a></li>
+          <li><a href="/posts/new">일정 등록</a></li>
+          <li class="dropdown">
+            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
+            <ul class="dropdown-menu" role="menu">
+              <li><a href="#">Action</a></li>
+              <li><a href="#">Another action</a></li>
+              <li><a href="#">Something else here</a></li>
+              <li class="divider"></li>
+              <li><a href="#">Separated link</a></li>
+            </ul>
+          </li>
+          <form action="/search" method="get" class="navbar-form navbar-left" role="search">
+            <div class="form-group">
+              <div class="col-xs-8 col-md-8" style="padding-right:1px;padding-left:0px;">
+                <input type="text" name="select_day" class="datepicker form-control" id="select_day" placeholder="날짜 검색">
+              </div>
+              <div class="col-xs-4 col-md-4" style="padding-left:1px;">
+                <button type="submit" class="btn btn-default">Submit</button>
+              </div>
+            </div>
+          </form>
+        </ul>
+      </div><!-- /.navbar-collapse -->
+    </div><!-- /.container-fluid -->
+  </div>
+</nav>
 <%= yield %>
 
 </body>
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('#select_day').datepicker({
+       autoclose: true,
+       todayHighlight: true,
+       format: 'yyyy-mm-dd'
+   });
+  });
+</script>
 </html>
