--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -3,20 +3,10 @@
       <div class="row">
         <div class="col-xs-6 col-md-2"><h1>일정 체크</h1></div>
         <div class="col-xs-6 col-md-1">
-          <%= link_to '일정 등록', new_post_path, class:"btn btn-primary", :style=>'color:#FFFFFF;margin-top:22px;' %>
-          <a href="/after_today" class="btn btn-primary" style="color:#FFFFFF">지난 일정</a>
+          <!--<%= link_to '일정 등록', new_post_path, class:"btn btn-primary", :style=>'color:#FFFFFF;margin-top:22px;' %>-->
+          <!--<a href="/after_today" class="btn btn-primary" style="color:#FFFFFF">지난 일정</a>-->
         </div>
         <div class="col-xs-12 col-md-4 col-md-offset-5" style="padding-top:18px;">
-          <form action="/search" method="get" class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-              <div class="col-xs-8 col-md-8" style="padding-right:1px;padding-left:0px;">
-                <input type="text" name="select_day" class="datepicker form-control" id="select_day" placeholder="날짜 검색">
-              </div>
-              <div class="col-xs-4 col-md-4" style="padding-left:1px;">
-                <button type="submit" class="btn btn-default">Submit</button>
-              </div>
-            </div>
-          </form>
         </div>
       </div>
     <div>
@@ -39,13 +29,3 @@
     </div>
       
 </div>
-
-<script type="text/javascript">
-  $(document).ready(function(){
-    $('#select_day').datepicker({
-       autoclose: true,
-       todayHighlight: true,
-       format: 'yyyy-mm-dd'
-   });
-  });
-</script>
