디자인 빼고 다한 듯

--- a/app/views/posts/new.html.erb
+++ b/app/views/posts/new.html.erb
@@ -3,5 +3,5 @@
     
     <%= render 'form' %>
     
-    <%= link_to 'Back', posts_path, class:"btn btn-default", :style=>'color:black;' %>
+    <%= link_to '뒤로가기', posts_path, class:"btn btn-default", :style=>'color:black;' %>
 </div>
