--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,6 +16,7 @@
   <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </head>
 <body>
+
 <nav class="navbar navbar-default">
   <div class="container">
     <div class="container-fluid">
@@ -36,31 +37,39 @@
           
           <li><a href="/after_today">지난 일정</a></li>
           <li><a href="/posts/new">일정 등록</a></li>
-          <li class="dropdown">
-            <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">Dropdown <span class="caret"></span></a>
-            <ul class="dropdown-menu" role="menu">
-              <li><a href="#">Action</a></li>
-              <li><a href="#">Another action</a></li>
-              <li><a href="#">Something else here</a></li>
-              <li class="divider"></li>
-              <li><a href="#">Separated link</a></li>
-            </ul>
-          </li>
-          <form action="/search" method="get" class="navbar-form navbar-left" role="search">
-            <div class="form-group">
-              <div class="col-xs-8 col-md-8" style="padding-right:1px;padding-left:0px;">
-                <input type="text" name="select_day" class="datepicker form-control" id="select_day" placeholder="날짜 검색">
+          <% if user_signed_in? %>
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown"><%= current_user.email %> <b class="caret"></b></a>
+              <ul class="dropdown-menu">
+                <li><%= link_to "My Profile", edit_user_registration_path %></li>
+                <li><%= link_to "Sign out", destroy_user_session_path, method: :delete, data: { confirm: "Are you sure?" } %></li>
+              </ul>
+            </li>
+          <% else %>
+            <li><%= link_to "Sign in", new_user_session_path %></li>
+            <li><%= link_to "Sign up", new_user_registration_path %></li>
+          <% end %>
+          <% if user_signed_in? %>
+            <form action="/search" method="get" class="navbar-form navbar-left" role="search">
+              <div class="form-group">
+                <div class="col-xs-8 col-md-8" style="padding-right:1px;padding-left:0px;">
+                  <input type="text" name="select_day" class="datepicker form-control" id="select_day" placeholder="날짜 검색">
+                </div>
+                <div class="col-xs-4 col-md-4" style="padding-left:1px;">
+                  <button type="submit" class="btn btn-default">Submit</button>
+                </div>
               </div>
-              <div class="col-xs-4 col-md-4" style="padding-left:1px;">
-                <button type="submit" class="btn btn-default">Submit</button>
-              </div>
-            </div>
-          </form>
+            </form>
+          <% end %>
         </ul>
       </div><!-- /.navbar-collapse -->
     </div><!-- /.container-fluid -->
   </div>
 </nav>
+<div class="container">
+  <%= render partial: "shared/flash_messages", flash: flash %>
+</div>
+
 <%= yield %>
 
 </body>
