--- a/app/views/posts/_form.html.erb
+++ b/app/views/posts/_form.html.erb
@@ -15,7 +15,7 @@
       <div class="col-xs-12 col-md-2">
         <div class="field">
           <%= f.label :day, "날짜" %><br>
-          <%= f.text_field :day,  :class => 'datepicker' %>
+          <%= f.text_field :day,  :class => 'datepicker', :id => 'select_set_day' %>
         </div>
       </div>
       <div class="col-xs-12 col-md-10">
@@ -26,6 +26,15 @@
       </div>
     </div>
     <div class="actions">
-      <%= f.submit :class => 'btn btn-primary' %>
+      <%= f.submit "등록하기" ,:class => 'btn btn-primary'%>
     </div>
   <% end %>
+<script type="text/javascript">
+  $(document).ready(function(){
+    $('#select_set_day').datepicker({
+       autoclose: true,
+       todayHighlight: true,
+       format: 'yyyy-mm-dd'
+   });
+  });
+</script>
