--- a/app/views/posts/after_today.erb
+++ b/app/views/posts/after_today.erb
@@ -12,21 +12,25 @@
     <div>
       <% @posts.each do |post| %>
         <% if @today > post.day %>
-          <div class="well">
-            <div class="row">
-              <div class="col-xs-12 col-md-8"><%= post.day %> | <%= post.content %></div>
-              <div class="col-xs-12 col-md-4">
-              <div style="text-align:right;">
-                <!--<%= link_to 'Show', post %>-->
-                <%= link_to 'Edit', edit_post_path(post) %>
-                <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+          <% if user_signed_in? %>
+            <% if post.updatable_by? current_user %>
+              <div class="well">
+                <div class="row">
+                  <div class="col-xs-12 col-md-8"><%= post.day %> | <%= post.content %></div>
+                  <div class="col-xs-12 col-md-4">
+                  <div style="text-align:right;">
+                    <!--<%= link_to 'Show', post %>-->
+                    <%= link_to 'Edit', edit_post_path(post) %>
+                    <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+                  </div>
+                  </div>
+                </div>
               </div>
-              </div>
-            </div>
-          </div>
+            <% end %>
+          <% end %>
         <% end %>
       <% end %>
     </div>
-      
-</div>
+    <%= link_to '전체 목록', posts_url, class:"btn btn-primary", :style=>'color:#FFFFFF;' %>
 
+</div>
