--- a/app/views/posts/index.html.erb
+++ b/app/views/posts/index.html.erb
@@ -1,31 +1,33 @@
 <div class="container">
-  <p id="notice"><%= notice %></p>
-      <div class="row">
-        <div class="col-xs-6 col-md-2"><h1>일정 체크</h1></div>
-        <div class="col-xs-6 col-md-1">
-          <!--<%= link_to '일정 등록', new_post_path, class:"btn btn-primary", :style=>'color:#FFFFFF;margin-top:22px;' %>-->
-          <!--<a href="/after_today" class="btn btn-primary" style="color:#FFFFFF">지난 일정</a>-->
-        </div>
-        <div class="col-xs-12 col-md-4 col-md-offset-5" style="padding-top:18px;">
-        </div>
-      </div>
-    <div>
-      <% @posts.each do |post| %>
-        <% if @today <= post.day %>
-          <div class="well">
-            <div class="row">
-              <div class="col-xs-12 col-md-8"><%= post.day %> | <%= post.content %></div>
-              <div class="col-xs-12 col-md-4">
-              <div style="text-align:right;">
-                <!--<%= link_to 'Show', post %>-->
-                <%= link_to 'Edit', edit_post_path(post) %>
-                <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
-              </div>
+  <div class="row">
+    <div class="col-xs-6 col-md-2"><h1>일정 체크</h1></div>
+    <div class="col-xs-6 col-md-1">
+      <!--<%= link_to '일정 등록', new_post_path, class:"btn btn-primary", :style=>'color:#FFFFFF;margin-top:22px;' %>-->
+      <!--<a href="/after_today" class="btn btn-primary" style="color:#FFFFFF">지난 일정</a>-->
+    </div>
+    <div class="col-xs-12 col-md-4 col-md-offset-5" style="padding-top:18px;">
+    </div>
+  </div>
+  <div>
+    <% @posts.each do |post| %>
+      <% if user_signed_in? %>
+        <% if post.updatable_by? current_user %>
+          <% if @today <= post.day %>
+            <div class="well">
+              <div class="row">
+                <div class="col-xs-12 col-md-8"><%= post.day %> | <%= post.content %></div>
+                <div class="col-xs-12 col-md-4">
+                <div style="text-align:right;">
+                  <!--<%= link_to 'Show', post %>-->
+                  <%= link_to 'Edit', edit_post_path(post) %>
+                  <%= link_to 'Destroy', post, method: :delete, data: { confirm: 'Are you sure?' } %>
+                </div>
+                </div>
               </div>
             </div>
-          </div>
+          <% end %>
         <% end %>
       <% end %>
-    </div>
-      
+    <% end %>
+  </div>
 </div>
