--- a/app/views/posts/search.html.erb
+++ b/app/views/posts/search.html.erb
@@ -1,23 +1,23 @@
 <div class="container">
   <p id="notice"><%= notice %></p>
     <h1>일정체크</h1>
-    <form action="/search" method="get">
-      <input type="text" name="select_day" class="datepicker form-control" id="select_day">
-      <button type="submit" class="btn btn-default">Submit</button>
-    </form>
       <% @result.each do |r| %>
-        <div class="well">
-          <div class="row">
-            <div class="col-xs-12 col-md-8"><%= r.day %> | <%= r.content %></div>
-            <div class="col-xs-12 col-md-4">
-            <div style="text-align:right;">
-              <!--<%= link_to 'Show', r %>-->
-              <%= link_to 'Edit', edit_post_path(r) %>
-              <%= link_to 'Destroy', r, method: :delete, data: { confirm: 'Are you sure?' } %>
+        <% if user_signed_in? %>
+          <% if r.updatable_by? current_user %>
+            <div class="well">
+              <div class="row">
+                <div class="col-xs-12 col-md-8"><%= r.day %> | <%= r.content %></div>
+                <div class="col-xs-12 col-md-4">
+                <div style="text-align:right;">
+                  <!--<%= link_to 'Show', r %>-->
+                  <%= link_to 'Edit', edit_post_path(r) %>
+                  <%= link_to 'Destroy', r, method: :delete, data: { confirm: 'Are you sure?' } %>
+                </div>
+                </div>
+              </div>
             </div>
-            </div>
-          </div>
-        </div>
+          <% end %>
+        <% end %>
       <% end %>
-      <%= link_to '전체 목록', posts_url, class:"btn btn-primary", :style=>'color:#FFFFFF;' %>
+    <%= link_to '전체 목록', posts_url, class:"btn btn-primary", :style=>'color:#FFFFFF;' %>
 </div>
