--- a/app/views/posts/show.html.erb
+++ b/app/views/posts/show.html.erb
@@ -1,21 +1,25 @@
-<div class="container">
-  <p id="notice"><%= notice %></p>
-  
-  <p>
-    <strong>Content:</strong>
-    <%= @post.content %>
-  </p>
-  
-  <p>
-    <strong>Day:</strong>
-    <%= @post.day %>
-  </p>
-  
-  <p>
-    <strong>Checking:</strong>
-    <%= @post.checking %>
-  </p>
-  
-  <%= link_to 'Edit', edit_post_path(@post) %> |
-  <%= link_to 'Back', posts_path %>
-</div>
+<% if user_signed_in? %>
+  <% if @post.updatable_by? current_user %>
+    <div class="container">
+      <p id="notice"><%= notice %></p>
+      
+      <p>
+        <strong>Content:</strong>
+        <%= @post.content %>
+      </p>
+      
+      <p>
+        <strong>Day:</strong>
+        <%= @post.day %>
+      </p>
+      
+      <p>
+        <strong>Checking:</strong>
+        <%= @post.checking %>
+      </p>
+      
+      <%= link_to 'Edit', edit_post_path(@post) %> |
+      <%= link_to 'Back', posts_path %>
+    </div>
+  <% end %>
+<% end %>
