--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -28,7 +28,7 @@
           <span class="icon-bar"></span>
           <span class="icon-bar"></span>
         </button>
-        <a class="navbar-brand" href="/">일정관리ㅎㅎ</a>
+        <a class="navbar-brand" href="/">일정관리</a>
       </div>
   
       <!-- Collect the nav links, forms, and other content for toggling -->
